--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Sanadtech | Heiballa Abdellahi</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="application web qui offre une interface graphique pour placer manuellement des carrés dans une grille (1000x1000 cases) depuis un menu et de pouvoir lier un carré à un autre en cliquant dessus. L'algorithme utilisé pour lier deux carrés devra trouver le plus court chemin pour les connecter en traversant les lignes de la grille en évitant les autres carrés et en faisant le moins de zigzag possible pour lier les 2 carrés.">
+    <meta name="keywords" content="application web,carrés,grille,inteligebce artificiel,java script,liaison,connection,zigzag">
+    <meta name="author" content="Heiballa Abdellahi">
     <style>
         body {margin:0;}
 
@@ -36,9 +41,9 @@
 </head>
 <body>
     <div class="navbar">
-        <a onclick="putSquare()">Placer Le carré</a>
-        <a onclick="toLink()">Lier Les Carrés</a>
-        <a onclick="clearCanvas()">Réinitialiser</a>
+        <a id="putSquare" onclick="putSquare()">Placer Le carré</a>
+        <a id="toLink" onclick="toLink()">Lier Les Carrés</a>
+        <a id="clearCanvas" onclick="clearCanvas()">Réinitialiser</a>
       </div>
 
 <br>
@@ -59,11 +64,16 @@ var context = canvas.getContext('2d');
     function toLink(){
         linked=true;
         placed=false;
+        document.getElementById("toLink").style.backgroundColor = '#99C262';
+        document.getElementById("putSquare").style.backgroundColor = '#333';
+        
     }
     //to activate putting funvtion
     function putSquare(){
         linked=false;
         placed=true;
+        document.getElementById("putSquare").style.backgroundColor = '#99C262';
+        document.getElementById("toLink").style.backgroundColor = '#333';
     }
     //function to get the square of the position of the click
     function getSquare(canvas, evt) {
@@ -137,6 +147,7 @@ function clearCanvas(){
    // context.clearRect(0, 0, 1000, 1000); just to clear the canvas but reload will do the job
    // drawGrid(context)
     location.reload()
+    document.getElementById("clearCanvas").style.backgroundColor = '#99C262';
 }
 
 //list of direction to a square
@@ -255,7 +266,7 @@ function Util(mat,point1,point2){
 
 
 	// Below arrays details all 4 possible movements from a cell
-    var row = [-1, 0, 0, 1, -1];
+    var row = [-1, 0, 0, 1];
     var col = [0, -1, 1, 0];
 
     // Function to check if it is possible to go to position (row, col)
