--- a/index.html
+++ b/index.html
@@ -60,6 +60,32 @@
   color: black;
   
 }
+.detailsbar h1 {
+    color: #999;
+     margin-bottom: 25px;
+     text-align: center;
+}
+
+.detailsbar h3 {
+    color: #999;
+     margin-bottom: 25px;
+     padding: 10px;
+     text-align: center;
+}
+
+.detailsbar h4 {
+    color: #999;
+     margin-bottom: 10px;
+     padding: 10px;
+     text-align: center;
+}
+
+.detailsbar p {
+    color: #999;
+     margin-bottom: 25px;
+     padding: 10px;
+}
+
 
 .main {
   padding: 16px;
@@ -88,16 +114,25 @@ text-align: center;
         <a id="clearCanvas" onclick="clearCanvas()">Réinitialiser</a>
       </div>
     <div class="detailsbar">
-        <h1 style="color: #999; margin-bottom: 25px;text-align: center;">Sanadtech</h1>
-        <h4 style="color: #999; margin-bottom: 25px;padding: 10px;text-align: center;">Sujet:</h4>
-        <p style="color: #999; margin-bottom: 25px;padding: 10px;text-align: center;">Développez une application web qui offre une interface graphique pour placer manuellement des carrés dans une grille (1000x1000 cases) depuis un menu et de pouvoir lier un carré à un autre en cliquant dessus. L'algorithme utilisé pour lier deux carrés devra trouver le plus court chemin pour les connecter en traversant les lignes de la grille en évitant les autres carrés et en faisant le moins de zigzag possible pour lier les 2 carrés; Préférer ce chemin par exemple https://take.ms/qP26c plutôt que celui là https://take.ms/1ds3e. Votre algorithme devra être le plus générique possible pour traiter tous les cas en dépit du nombre des obstacles/carrés présents dans la grille au moment de lier les deux carrés concernés</p>
-        <h3 style="color: #999; margin-bottom: 25px;padding: 10px;text-align: center;">HEIBALLA Abdellahi</h3>
+        <h1>Sanadtech</h1>
+        <h4>Sujet:</h4>
+        <p>Développez une application web qui offre une interface 
+            graphique pour placer manuellement des carrés dans une grille (1000x1000 cases) 
+            depuis un menu et de pouvoir lier un carré à un autre en cliquant dessus. 
+            L'algorithme utilisé pour lier deux carrés devra trouver le plus court chemin pour
+            les connecter en traversant les lignes de la grille en évitant les autres carrés et en 
+            faisant le moins de zigzag possible pour lier les 2 carrés; Préférer ce chemin par exemple
+            <a href="https://take.ms/qP26c" target="_blank">example 1</a> plutôt que celui là <a href="https://take.ms/1ds3e" target="_blank">example 2</a>. Votre algorithme devra 
+            être le plus générique possible pour traiter tous les cas en dépit du nombre des 
+            obstacles/carrés présents dans la grille au moment de lier les deux carrés concernés
+        </p>
+        <h3>HEIBALLA Abdellahi</h3>
         
-                                <a class="css-is-deranged" href="https://github.com/HeiballaAbdellahi" target="_blank">GitHub</a>
-                                <a class="css-is-deranged" href="https://www.linkedin.com/in/heiballaabdellahi/" target="_blank">Linkedin</a>
-                                <a class="css-is-deranged" href="https://www.facebook.com/heiballa.abdellahi" target="_blank">Facebook</a>
-                                <a class="css-is-deranged" href="https://www.instagram.com/heiballa_abdellahi/" target="_blank">Instagram</a>
-                                <a class="css-is-deranged" href="https://mail.google.com/mail/u/?authuser=abdellahmedlemine@gmail.com" target="_blank">Google+</a>
+                                <a href="https://github.com/HeiballaAbdellahi" target="_blank">GitHub</a>
+                                <a href="https://www.linkedin.com/in/heiballaabdellahi/" target="_blank">Linkedin</a>
+                                <a href="https://www.facebook.com/heiballa.abdellahi" target="_blank">Facebook</a>
+                                <a href="https://www.instagram.com/heiballa_abdellahi/" target="_blank">Instagram</a>
+                                <a href="https://mail.google.com/mail/u/?authuser=abdellahmedlemine@gmail.com" target="_blank">Google+</a>
                                 
     </div>
 
