--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="application web qui offre une interface graphique pour placer manuellement des carrés dans une grille (1000x1000 cases) depuis un menu et de pouvoir lier un carré à un autre en cliquant dessus. L'algorithme utilisé pour lier deux carrés devra trouver le plus court chemin pour les connecter en traversant les lignes de la grille en évitant les autres carrés et en faisant le moins de zigzag possible pour lier les 2 carrés.">
     <meta name="keywords" content="application web,carrés,grille,inteligebce artificiel,java script,liaison,connection,zigzag">
     <meta name="author" content="Heiballa Abdellahi">
-    <link rel="stylesheet" type="text/css" href="./Sanadtech.css"/>
+    <link rel="stylesheet" type="text/css" href="Sanadtech.css"/>
 </head>
 <body>
     <div class="navbar">
@@ -39,7 +39,7 @@
 
     <div class="main">
         <canvas id="myCanvas" width="1000" height="1000"></canvas>
-        <script src="./sanadtech.js"></script>
+        <script src="sanadtech.js"></script>
     </div>
 
     <div class="footer">
