final commit it was fun

--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
             être le plus générique possible pour traiter tous les cas en dépit du nombre des 
             obstacles/carrés présents dans la grille au moment de lier les deux carrés concernés.
         </p>
-        <h3>HEIBALLA Abdellahi</h3>
         
+        
+        <h3><img src="img_avatar.png" alt="Avatar" ></h3>
+        <h3>HEIBALLA Abdellahi</h3>
         <a href="https://github.com/HeiballaAbdellahi" target="_blank">GitHub</a>
         <a href="https://www.linkedin.com/in/heiballaabdellahi/" target="_blank">Linkedin</a>
         <a href="https://www.facebook.com/heiballa.abdellahi" target="_blank">Facebook</a>
